--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -1,15 +1,15 @@
+ACHTUNG: bitte in diesem file nichts editieren!
+ACHTUNG: statt dessen das file BUGS.txt editieren!
+ACHTUNG:
+ACHTUNG: (dieses file ist nur ein "view" auf BUGS.txt)
+
 pd/DSP:
-  - SFPLAYER nur dummy-m‰ﬂig implementiert
-  + 8 Kanal Player implementiert
 
 pd/DSP/ambisonic:
   - Distanzregler wird leiser wenn Entfernung nach Null geht ????
 
-  - stellt man die ambisonic-gewichte um, wird es laut (0dBmidi <-> 0dBrms)
-
 
 pd/GUI:
-  - SPLAYER als Eingang zwar im Patch aber keine Bedienung in der 
 
 pd/MIDI:
   - MIDI in/out sollte schaltbar sein (z.b. keine positionsdaten)
@@ -25,7 +25,5 @@ pd/extensions:
 pd/CUE:
 
 hardware/bc{f,r}2000:
-  - Beschriftung der Controller (evt. von Gernot mit Beschrifter)
 
 pd-0.39-1test1/alsamidi:
-  - nicht so gut wenn z.b. seq-dummy geladen ist: macht ein device 
