--- a/Install.txt
+++ b/Install.txt
@@ -6,8 +6,8 @@
 
 Intallation instruction:
 
-Either you install it from the complete package (see a) or if you want to compile it, check out
-from SVN (see b)
+Either you install it from the complete package (see a)
+or if you want to compile it, check out from SVN (see b)
 
 Prerequistites:
 
@@ -21,7 +21,10 @@ Prerequistites:
 
 2) libraries if not in package from SVN
 
-   Fetch the libraries via revision system, compile (see instructions there)  and install them on the system. If you cannot install them on the system then put the libraries in the lib/libs/ folder and correct the PATH in the startup script.
+   Fetch the libraries via revision system, compile (see instructions there)
+   and install them on the system. If you cannot install them on the system 
+   then put the libraries in the lib/libs/ folder and correct the PATH in 
+   the configuration file etc/CUBEmixer/LocalVars (see README.txt for info)
    Also setup the path to the abstraction libnraries iemabs, zexyabs (iemhelp2)
 
 2.1) iemlib1, iemlib2 
@@ -72,4 +75,4 @@ Prerequistites:
     http://svn.sourceforge.net/viewcvs.cgi/iem/spatialization/CUBEmixer/branches/
 
 
-4.) Put the CUBEmiser in your favorite place and look at the bin folder for the startup script.
+4.) Put the CUBEmixer in your favorite place and look at the bin folder for the startup script.
