--- a/Install.txt
+++ b/Install.txt
@@ -24,6 +24,11 @@ Prerequistites:
    Fetch the libraries via revision system, compile (see instructions there)  and install them on the system. If you cannot install them on the system then put the libraries in the lib/libs/ folder and correct the PATH in the startup script.
    Also setup the path to the abstraction libnraries iemabs, zexyabs (iemhelp2)
 
+   For Linux and maybe other unixes you can use the Makefile in src/libs to fetch and compile and install the externals.
+   (eg.: make PDSOURCE=/path/to/sources/of/pd/src )
+
+   For Window User use the precompiled-Package and copy the content of the libs folder to the actual one (if not there).
+
 2.1) iemlib1, iemlib2 
 
       sh: cvs -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/pure-data login
@@ -72,4 +77,4 @@ Prerequistites:
     http://svn.sourceforge.net/viewcvs.cgi/iem/spatialization/CUBEmixer/branches/
 
 
-4.) Put the CUBEmiser in your favorite place and look at the bin folder for the startup script.
+4.) Put the CUBEmixer in your favorite place and look at the bin folder for the startup script.
