--- a/Install.txt
+++ b/Install.txt
@@ -9,56 +9,20 @@ Intallation instruction:
 Either you install it from the complete package (see a) or if you want to compile it, check out
 from SVN (see b)
 
-Prerequistites:
+A) What you need:
 
-1)  PD: Version  0.39-2 or greater
+1)  PD: Version  0.39-2 or higher Version
 
 	see http://crca.ucsd.edu/~msp/software.html
 
         sh: wget http://crca.ucsd.edu/~msp/Software/pd-0.39-2.src.tar.gz
 
+2.) Get this package (chances are high, you already have it...)
 
 
-2) libraries if not in package from SVN
+ a) Packages:
 
-   Fetch the libraries via revision system, compile (see instructions there)  and install them on the system. If you cannot install them on the system then put the libraries in the lib/libs/ folder and correct the PATH in the startup script.
-   Also setup the path to the abstraction libnraries iemabs, zexyabs (iemhelp2)
-
-   For Linux and maybe other unixes you can use the Makefile in src/libs to fetch and compile and install the externals.
-   (eg.: make PDSOURCE=/path/to/sources/of/pd/src )
-
-   For Window User use the precompiled-Package and copy the content of the libs folder to the actual one (if not there).
-
-2.1) iemlib1, iemlib2 
-
-      sh: cvs -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/pure-data login
-      sh: cvs -z3 -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/pure-data co -P externals/iemlib
-
-2.2) iemmatrix
-
-      sh: cvs -z3 -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/pure-data co -P  externals/iem/iemmatrix/
-
-2.3) iem_ambi
-
-        ??????????????? 
-
-2.4) zexy
-
-      sh: cvs -z3 -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/pure-data co -P externals/zexy
-
-2.5) popup
-
-      sh: cvs -z3 -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/pure-data co -P  externals/bbogart/popup/
-
-
-
-2.6 MIDI-Library Under in Linux only if used with external MIDI-Controller
-
-     sh: cvs -z3 -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/pure-data co -P externals/iem/aconnect
-
-3.) Get this package (chances are high, you already have it...)
-
-3.a) Download as complete Package from
+    Download as complete Package from
 
     IEM Project Page - http://sourceforge.net/projects/iem/
 
@@ -68,7 +32,9 @@ Prerequistites:
 
    Unpack and follow instruction there.
 
-3.b) Get the current development version via Subversion (SVN) from sourceforge;
+ b) Development Version
+
+   Get the current development version via Subversion (SVN) from sourceforge;
    the sourceforge-project is called "iem", and you need to get the sub-project "CUBEmixer".
    To get the main development branch use something like
      sh: svn co  https://svn.sourceforge.net/svnroot/iem/spatialization/CUBEmixer/trunk/ CUBEmixer
@@ -76,5 +42,36 @@ Prerequistites:
    You can also get a sub-branch; you can find a list of available sub-branches here:
     http://svn.sourceforge.net/viewcvs.cgi/iem/spatialization/CUBEmixer/branches/
 
+3.) Configuration
 
-4.) Put the CUBEmixer in your favorite place and look at the bin folder for the startup script.
+   if needed your system can be configured with local settings which ar in  folder etc/CUBEmixer/
+
+   linux and other unixes:
+
+    default values are in  LocalVars.template.sh
+    make a local copy to LocalVars.sh in the same folder
+   
+     cp etc/CUBEmixer/LocalVars.template.sh  etc/CUBEmixer/LocalVars.sh
+
+    and edit etc/CUBEmixer/LocalVars.sh (read instructions there)
+
+   windows:
+
+    default values are in  LocalVars.template.bat
+    make a local copy to LocalVars.sh in the same folder
+   
+     cp etc/CUBEmixer/LocalVars.template.bat  etc/CUBEmixer/LocalVars.bat
+
+    and edit etc/CUBEmixer/LocalVars.bat  with an text editor (read instructions in comments).
+
+
+4.) Put the CUBEmixer in your favorite place and look at the bin/ folder for the startup script.
+
+	Please start Mixer with skript located in the 'bin' folder for your
+
+	linux: Cubemixer.sh
+ 	windows: first start 'CUBEmixerDSP.bat' and then 'CubemixerGUI.bat'
+
+    you can put an Alias or link on your Desktop or menu to start the Mixer.
+
+
