updated README (previous INSTALL.txt)

--- a/src/libs/INSTALL.txt
+++ b/src/libs/INSTALL.txt
@@ -5,87 +5,62 @@ Installtion of needed pd-externals for Cubemixer:
 A) Overview pd-externals needed for CUBEmixer:
 ----------------------------------------------
 
- aconnect (linux)
- iemgui
- iemlib
- iemmatrix
- iem_ambi
- iem_spec2
- popup
- zexy
+aconnect (linux with alsamidi)
+folder_list
+hcs
+hdspm_mixer
+iem_ambi
+iem_ambi2
+iem_bin_ambi
+iemgui
+iemlib
+iemmatrix
+iem_spec2
+miXed
+net
+osc
+pdogg (optional)
+popup
+zexy
 
 they will be installed in lib/libs/ 
 (just copy everything in it without directory-hierarchy to this path)
 
-All of these externals (with the notable exception of iemgui) 
-are not included with this package!
+All of these externals (with the notable exception of folder_list) 
+are not included with this package but as external svn reference!
 
-The missing externals are available from the pure-data CVS-repository 
+The missing externals are available from the pure-data SVN-repository 
 hosted by SourceForge.
-You can get them via:
-sh~> cvs -d:pserver:anonymous@cvs.pd.iem.at/projects/pure-data login
-(when asked for a password, just hit return)
-sh~> cvs -d:pserver:anonymous@cvs.pd.iem.at/projects/pure-data co externals
+You can get them via svn, see sourceforge prject page of PD:
+
+   svn co https://pure-data.svn.sourceforge.net/svnroot/pure-data/trunk/externals
 
 B) QUICKINSTALL
 ---------------
 
-Linux (and maybe Mac OS-X):
+Linux 
 ...........................
 
 To ease the installation, you can run "make" in this directory.
-This should download all needed externals, compile them and install them into
+This should compile all needed externals and install them into
 a place where CUBEmixer will look for them.
 Since some externals rely on the full pd-sources, you will have to give the
 full path to your pd sources.
 Use something like
 sh~>make PDSOURCE=/path/to/sources/of/pd/src
 
+If you use the pd included in the parent directory use the the absolute path to there.
+
 WINDOWS:
 ........
-
+(not tested with Version 3.0)
 get the compiled package from http://sourceforge.net/projects/iem/ (files) and copy the content of lib/libs to the lib/libs folder.
 
+Mac-OSX:
+........
+read the README_OSX.txt
 
-
-B) Manual install
------------------
-
- + iemlib1, iemlib2 
-
-      sh: cvs -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data login
-      sh: cvs -z3 -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data co -P externals/iemlib
-
- + iemmatrix
-
-      sh: cvs -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data login
-      sh: cvs -z3 -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data co -P  externals/iem/iemmatrix
-
- + iem_ambi
-
-      sh: cvs -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data login
-      sh: cvs -z3 -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data co -P  externals/iem/iem_ambi
-
- + iem_spec2
-
-      sh: cvs -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data login
-      sh: cvs -z3 -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data co -P  externals/iem/iem_spec2
-
- + zexy
-
-      sh: cvs -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data login
-      sh: cvs -z3 -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data co -P externals/zexy
-
- + popup
-
-      sh: cvs -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data login
-      sh: cvs -z3 -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data co -P  externals/bbogart/popup/
-      (will change in future).
-
- + MIDI-Library only if used with external MIDI-Controller      * LINUX ONLY *
-
-      sh: cvs -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data login
-      sh: cvs -z3 -d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data co -P externals/iem/aconnect
 
 iem, 23032006
+updated for Version 3.0 20042009, winfried ritsch
 
